--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Odin Project - Rock Paper Scissors</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+  <div class="container">
+    <button id="rock-btn">Rock</button>
+    <button id="paper-btn">Paper</button>
+    <button id="scissors-btn">Scissors</button>
+  </div>
+  <h1 id="round-result"></h1>
+  <div class="scoring">
+    <p class="player-score">
+      0
+    </p>
+    <p class="computer-score">
+      0
+    </p>
+  </div>
   <script src="scripts/scripts.js"></script>
 </body>
 </html>
