--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
   <div class="container">
-    <button id="rock-btn">Rock</button>
+    <input id="rock-btn" type="image" src="images/rock.png" value="rock">
+    <input id="paper-btn" type="image" src="images/paper.png" value="paper">
+    <input id="scissors-btn" type="image" src="images/scissors.png" value="scissors">
+
+    <!-- <button id="rock-btn"><img src="images/rock.png" alt=""></button>
     <button id="paper-btn">Paper</button>
-    <button id="scissors-btn">Scissors</button>
+    <button id="scissors-btn">Scissors</button> -->
   </div>
   <h1 id="round-result"></h1>
   <div class="scoring">
